map with placemaker front static

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
     <script>
      window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
       </script> 
+          <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.28&libraries=places,geometry"></script>
+          <script type="text/javascript" src="http://htmlpreview.github.io/?https://github.com/googlemaps/v3-utility-library/blob/master/archive/infobox/docs/reference.html"></script>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
